--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -19,7 +19,11 @@
     <ul>
         @foreach(ProductosExternosMVC.Services.ProductoDto producto in ViewBag.Productos)
         {
-            <li>@producto.Nombre - @producto.Precio</li>
+            <li>@producto.Nombre - @producto.Precio - @producto.CreatedAt - @producto.UpdatedAt <a href="@Url.Action("BorrarProducto", "Home", new {id = producto.Id})" 
+                class="btn btn-secondary">X</a>
+                <a href="@Url.Action("Modificar", "Home", new {id = producto.Id})">Editar</a></li> 
         }
     </ul>
 </div>
+
+
